# echo

./: .env.example  .gitignore  .gitignore.yaml  .token  API_REFERENCE.md  ARCHITECTURE.md  CLAUDE.md  CODEBASE_REVIEW_REPORT.md  CONTRIBUTING.md  DEPLOYMENT.md  ENHANCED_EMAIL_INTEGRATION.md  README.md  STRUCTURE.md  TECHNICAL_DEBT.md  TESTING.md  api_server.py  api_server_backup.py  cli.py  demo_calendar_push.py  demo_finish_day.py  demo_macos_app.py  gcal_credentials.json  node_module  package-lock.json  package.json  pyproject.toml  run_echo.py  test_complete_integration.py  test_env.py  test_session_api_endpoints.py
.claude/: CLAUDE.md
archive/: demo_calendar_push.py  run_echo.py
config/: README.md  config_schema.md  sample_config.yaml  user_config.yaml
data/: quote_db.json  session_intelligence.db  test_conversation_states.db  test_session_intelligence.db
dev/: 01_vision_and_princuples.md  02_echo_prd.md  05_todos.md  07_session_logging_architecture.md  08_meeting_summarizer_architecture.md  09_architecture_overview.md  10_current_status.md  TOKEN_MANAGEMENT.md  testing_scheduler.py
docs/: README.md  imap_setup.md  oauth_setup.md
echo/: __init__.py  academic_domain_detector.py  adaptive_coaching_service.py  adaptive_prompt_generator.py  analytics.py  calendar_writer.py  claude_client.py  cli.py  config_intelligence.py  config_loader.py  config_validator.py  database_schema.py  (+25 more)
echo-application/: API_CONFIGURATION.md  jest.config.js  jest.setup.js  package-lock.json  package.json  playwright.config.ts
echo-dashboard/: package-lock.json  package.json
(+732 files in other folders)
